--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a href="tel:+380660568965">+380 66 056 89 65</a> <br />
-        <a href="mailto:k.peresada@yandex.ua">k.peresada@yandex.ua</a>
+        <a class="header-phone" href="tel:+380660568965">+380 66 056 89 65</a>
+        <br />
+        <a class="header-email" href="mailto:k.peresada@yandex.ua"
+          >k.peresada@yandex.ua</a
+        >
       </div>
     </header>
 
@@ -28,6 +31,14 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img
+            src="files/used.jpg"
+            alt="Фотография Неопознанного Енота"
+            width="928"
+            height="536"
+          />
+        </figure>
         <h3>
           Меня зовут Кирилл и неделю назад я захотел стать Front-end
           программистом
@@ -51,13 +62,26 @@
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
 
-        <h3>Сайт-резюме</h3>
+        <h4>Сайт-резюме</h4>
         <p>
           <a href="https://kyrylo-resume.netlify.app/" target="_blank">
             Мой первый сайт.
           </a>
         </p>
-
+        <figure class="project-image">
+          <img
+            src="files/project.jpg"
+            alt="Сайт магазина товаров для дома"
+            width="928"
+            height="536"
+          />
+        </figure>
+        <h4>
+          <p>Мой второй сайт.</p>
+        </h4>
+        <a class="button" href="source/project-gloevk/index.html"
+          >Открыть страницу</a
+        >
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -65,8 +89,11 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a href="tel:+380660568965">+380 66 056 89 65</a> <br />
-        <a href="mailto:k.peresada@yandex.ua">k.peresada@yandex.ua</a>
+        <a class="footer-phone" href="tel:+380660568965">+380 66 056 89 65</a>
+        <br />
+        <a class="footer-email" href="mailto:k.peresada@yandex.ua"
+          >k.peresada@yandex.ua</a
+        >
       </div>
     </footer>
   </body>
