добавил сайт-резюме

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
+        <figure class="project-image">
+          <img
+            src="files/resume.jpg"
+            alt="Сайт-резюме"
+            width="928"
+            height="536"
+          />
+        </figure>
 
         <h4>Сайт-резюме</h4>
         <p>
@@ -68,6 +76,9 @@
             Мой первый сайт.
           </a>
         </p>
+        <a class="button" href="https://kyrylo-resume.netlify.app/"
+          >Открыть страницу</a
+        >
         <figure class="project-image">
           <img
             src="files/project.jpg"
