--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
           />
         </figure>
 
-        <h4>Сайт-резюме</h4>
-        <p>
-          <a href="https://kyrylo-resume.netlify.app/" target="_blank">
-            Мой первый сайт.
-          </a>
-        </p>
+        <h4>
+          Сайт-резюме
+          <p>Мой первый сайт.</p>
+        </h4>
         <a class="button" href="https://kyrylo-resume.netlify.app/"
           >Открыть страницу</a
         >
@@ -87,6 +85,7 @@
             height="536"
           />
         </figure>
+        <br />
         <h4>
           <p>Мой второй сайт.</p>
         </h4>
