--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
           Сайт-резюме
           <p>Мой первый сайт.</p>
         </h4>
-        <a class="button" href="https://kyrylo-resume.netlify.app/"
+        <a
+          class="button"
+          target="_blank"
+          href="https://kyrylo-resume.netlify.app/"
           >Открыть страницу</a
         >
         <figure class="project-image">
@@ -89,7 +92,10 @@
         <h4>
           <p>Мой второй сайт.</p>
         </h4>
-        <a class="button" href="source/project-gloevk/index.html"
+        <a
+          class="button"
+          target="_blank"
+          href="source/project-gloevk/index.html"
           >Открыть страницу</a
         >
         <h3>Блог начинающего верстальщика</h3>
