--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
           <img
-            src="files/used.jpg"
+            src="files/user.jpg"
             alt="Фотография Неопознанного Енота"
             width="928"
             height="536"
