--- a/index.html
+++ b/index.html
@@ -61,42 +61,48 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-        <figure class="project-image">
-          <img
-            src="files/resume.jpg"
-            alt="Сайт-резюме"
-            width="928"
-            height="536"
-          />
-        </figure>
+        <table width="928">
+          <th>
+            <figure class="project-image">
+              <img
+                src="files/resume.jpg"
+                alt="Сайт-резюме"
+                width="464"
+                height="536"
+              />
+            </figure>
 
-        <h4>
-          <p>Мой первый сайт.</p>
-        </h4>
-        <a
-          class="button"
-          target="_blank"
-          href="https://kyrylo-resume.netlify.app/"
-          >Открыть страницу</a
-        >
-        <figure class="project-image">
-          <img
-            src="files/project.jpg"
-            alt="Сайт магазина товаров для дома"
-            width="928"
-            height="536"
-          />
-        </figure>
+            <h4>
+              <p>Мой первый сайт.</p>
+            </h4>
+            <a
+              class="button"
+              target="_blank"
+              href="https://kyrylo-resume.netlify.app/"
+              >Открыть страницу</a
+            >
+          </th>
+          <th>
+            <figure class="project-image">
+              <img
+                src="files/project.jpg"
+                alt="Сайт магазина товаров для дома"
+                width="464"
+                height="536"
+              />
+            </figure>
 
-        <h4>
-          <p>Мой второй сайт.</p>
-        </h4>
-        <a
-          class="button"
-          target="_blank"
-          href="source/project-gloevk/index.html"
-          >Открыть страницу</a
-        >
+            <h4>
+              <p>Мой второй сайт.</p>
+            </h4>
+            <a
+              class="button"
+              target="_blank"
+              href="source/project-gloevk/index.html"
+              >Открыть страницу</a
+            >
+          </th>
+        </table>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
       </div>
