changing in text

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h3>Умею верстать простенькие сайты с минимумом блоков</h3>
         <p>
           У меня есть опыт верстки, но он слишком мал, чтобы предоставлять хоть
-          какие то услуги :(
+          какие то услуги, однако я учусь
         </p>
       </div>
     </section>
