--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <a class="header-phone" href="tel:+380660568965">+380 66 056 89 65</a>
         <br />
         <a class="header-email" href="mailto:k.peresada@yandex.ua"
-          >k.peresada@yandex.ua</a
-        >
+          >k.peresada@yandex.ua
+        </a>
       </div>
     </header>
 
@@ -55,6 +55,15 @@
           У меня есть опыт верстки, но он слишком мал, чтобы предоставлять хоть
           какие то услуги, однако я учусь
         </p>
+      </div>
+      <div class="skills">
+        <h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level"><span style="width: 60%">60%</span></dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level"><span style="width: 40%">40%</span></dd>
+        </dl>
       </div>
     </section>
 
@@ -113,8 +122,8 @@
         <a class="footer-phone" href="tel:+380660568965">+380 66 056 89 65</a>
         <br />
         <a class="footer-email" href="mailto:k.peresada@yandex.ua"
-          >k.peresada@yandex.ua</a
-        >
+          >k.peresada@yandex.ua
+        </a>
       </div>
     </footer>
   </body>
