--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <h3>Мои навыки</h3>
         <dl class="skills-list">
           <dt class="skill-html">HTML</dt>
-          <dd class="level"><span style="width: 60%">60%</span></dd>
+          <dd class="level"><div style="width: 60%">60%</div></dd>
           <dt class="skill-css">CSS</dt>
-          <dd class="level"><span style="width: 40%">40%</span></dd>
+          <dd class="level"><div style="width: 40%">40%</div></dd>
         </dl>
       </div>
     </section>
@@ -108,8 +108,9 @@
               class="button"
               target="_blank"
               href="source/project-gloevk/index.html"
-              >Открыть страницу</a
             >
+              Открыть страницу
+            </a>
           </th>
         </table>
         <h3>Блог начинающего верстальщика</h3>
@@ -121,8 +122,8 @@
       <div class="container">
         <a class="footer-phone" href="tel:+380660568965">+380 66 056 89 65</a>
         <br />
-        <a class="footer-email" href="mailto:k.peresada@yandex.ua"
-          >k.peresada@yandex.ua
+        <a class="footer-email" href="mailto:k.peresada@yandex.ua">
+          k.peresada@yandex.ua
         </a>
       </div>
     </footer>
