Добавил гриды вместо таблиц

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-        <table width="928">
-          <th>
+        <ul class="grid">
+          <li>
             <figure class="project-image">
               <img
                 src="files/resume.jpg"
@@ -90,8 +90,8 @@
               href="https://kyrylo-resume.netlify.app/"
               >Открыть страницу</a
             >
-          </th>
-          <th>
+          </li>
+          <li>
             <figure class="project-image">
               <img
                 src="files/project.jpg"
@@ -111,8 +111,8 @@
             >
               Открыть страницу
             </a>
-          </th>
-        </table>
+          </li>
+        </ul>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
       </div>
