changing in site direction

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           какие то услуги, однако я учусь
         </p>
       </div>
-      <div class="skills">
+      <div class="container">
         <h3>Мои навыки</h3>
         <dl class="skills-list">
           <dt class="skill-html">HTML</dt>
@@ -82,14 +82,16 @@
             </figure>
 
             <h4>
-              <p>Мой первый сайт.</p>
+              <p class="my-sites">Мой первый сайт.</p>
             </h4>
-            <a
-              class="button"
-              target="_blank"
-              href="https://kyrylo-resume.netlify.app/"
-              >Открыть страницу</a
-            >
+            <p class="anchor-sites">
+              <a
+                class="button"
+                target="_blank"
+                href="https://kyrylo-resume.netlify.app/"
+                >Открыть страницу</a
+              >
+            </p>
           </li>
           <li>
             <figure class="project-image">
@@ -102,15 +104,17 @@
             </figure>
 
             <h4>
-              <p>Мой второй сайт.</p>
+              <p class="my-sites">Мой второй сайт.</p>
             </h4>
-            <a
-              class="button"
-              target="_blank"
-              href="source/project-gloevk/index.html"
-            >
-              Открыть страницу
-            </a>
+            <p class="anchor-sites">
+              <a
+                class="button"
+                target="_blank"
+                href="source/project-gloevk/index.html"
+              >
+                Открыть страницу
+              </a>
+            </p>
           </li>
         </ul>
         <h3>Блог начинающего верстальщика</h3>
